--- a/package.json
+++ b/package.json
@@ -41,8 +41,5 @@
   "bugs": {
     "url": "https://github.com/opentok/cordova-plugin-opentok/issues"
   },
-  "homepage": "https://github.com/opentok/cordova-plugin-opentok#readme",
-  "scripts": {
-    "build": "node_modules/grunt"
-  }
+  "homepage": "https://github.com/opentok/cordova-plugin-opentok#readme"
 }
