--- a/plugin.xml
+++ b/plugin.xml
@@ -9,6 +9,8 @@
     <license>Apache 2.0</license>
     <keywords>opentok,tokbox</keywords>
 
+    <dependency id="cordova-plugin-wkwebview-engine" version="1.2.1"/>
+
     <platform name="android">
       <framework src="build-extras.gradle" custom="true" type="gradleReference" />
       <framework src="com.android.support:appcompat-v7:23.1.0" />
